# panda_trajectory_gui

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: gui.launch  rviz.launch
rviz/: panda_gui.rviz
scripts/: panda_trajectory_gui.py
