<?xml version="1.0"?>
<package format="2">
  <name>panda_trajectory_gui</name>
  <version>0.1.0</version>
  <description>
    A GUI-based trajectory editor and player for the Franka Emika Panda robot using ROS 1 noetic.
  </description>

  <maintainer email="drburaksisman@gmail.com">Burak Sisman</maintainer>
  <author email="drburaksisman@gmail.com">Burak Sisman</author>
  <license>MIT</license>

  <url type="website">https://github.com/buraksisman/panda_trajectory_gui</url>

  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>franka_core_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>franka_core_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
    <!-- Add plugin or metapackage info here if needed -->
  </export>
</package>
